app.yaml
#Parker Hatch 2022
# This is the version of YAML we are using with the Kubernetes API
apiVersion: apps/v1
# The kind is the type of kubernetes resource we are using
# A deployment is when we run code on a server
kind: Deployment
# Metadata is information related to the object we created in Kubernetes
metadata:
# The name here is the name of our deployment
  name: stedi-parker
spec:
# Replicas refers to the number of pods we deploy
  replicas: 1
# A selector is a route to my pod
  selector:
# Matchlabels are a label for my selector
    matchLabels:
# App is a specific kind of label for my pod
      app: stedi-parker
# The Template describes all the features of my pod
  template:
# Metadata provides labels for my template
    metadata:
      labels:
        app: stedi-parker
# The spec refers to the specification of my containers in my pod
    spec:
# Containers can have one or more docker containers in the pod
      containers:
# The name of the container is specified below
        - name: stedi-parker
# The image is a prebuilt file containing the operating system
          image: gcr.io/cit262-group-project/stedi-parker
          ports:
# The container port is a specific port the pod listens on
          - containerPort: 4567
# Resources are the compute resources used by the pod in the cloud
          resources:
# Limits represent the max amount of cpu and memory allowed for the pod
            limits:
# CPU is the max amount of CPU that can be used by the pod
              cpu: ".125"
# Memory is the max amount of memory that can be used by the pod
              memory: "500Mi"
# Requests is the minimum amount of compute resources used by the pod
            requests:
# CPU is the minimum amount of CPU the pod needs to run
              cpu: ".125"
# Memory is the minimum amount of memory the pod needs to run
              memory: "250Mi"
# LivenessProbe is a configuration that checks the pod for health
          livenessProbe:
# HttpGet instructs kubernetes to do an HTTP request to check health
            httpGet:
# Path defines the url to use when doing the HTTP request
              path: /
# Port defines the port to use when doing the HTTP request
              port: 4567
# initialDelaySeconds tells Kubernetes to wait before doing a request
            initialDelaySeconds: 10
# periodSeconds tells Kubernetes how often to check health
            periodSeconds: 3
# --- 
#   # apiVersion tells kubernetes which version of yaml to use
# apiVersion: v1
# # kind tells kubernetes what kind of object to create
# kind: Service
# # metadata contains attributes about the object
# metadata:
# # name is the name of the object we are creating
#   name: stedi-parker-loadbalancer
# # spec is the specification for the object (or the loadbalancer)
# spec:
# # selector tells the network layer how to find the right pod
#   selector:
# # app tells the selector which app to send traffic to
#     app: stedi-parker
# # type tells kubernetes the type of service we want
# # a LoadBalancer distributes network packets to one or more pods
#   type: LoadBalancer
# # ports are a list of ports the Load Balancer listens on
#   ports:
# # port is the port we want to listen on the network
#     - port: 80
# # targetport is the port the pod listens on inside Kubernetes
#       targetPort: 4567
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stedi-ingress-parker
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stedi-public-parker
    networking.gke.io/managed-certificates: stedi-certificate-parker
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
spec:
  # defaultBackend:
  #   service:
  #     name: stedi-nodeport-parker
  #     port:
  #       number: 80
  rules:
    - http:
        paths:
        - path: /dev
          pathType: ImplementationSpecific
          backend:
            service:
              name: stedi-nodeport-parker
              port:
                number: 80
#         - path: /discounted
#           pathType: ImplementationSpecific
#           backend:
#             service:
#               name: my-discounted-products
#               port:
#                 number: 80
# ---
apiVersion: networking.gke.io/v1
kind: ManagedCertificate
metadata:
  name: stedi-certificate-parker
spec:
  domains:
    - parkerhatch.cit262.com
---
apiVersion: v1
kind: Service
metadata: 
  name: stedi-nodeport-parker
spec:
  selector:
    app: stedi-parker
  type: NodePort
  ports:
    - port: 80
      targetPort: 4567
